name:                haskell-morse-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xiongchenyu6/haskell-morse-code#readme
license:             BSD3
license-file:        LICENSE
author:              xiongchenyu6
maintainer:          xiongchenyu6@gmail.com
copyright:           2018 xiongchenyu6
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010


executable haskell-morse-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,QuickCheck
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall -fwarn-tabs
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,QuickCheck
  default-language:    Haskell2010
